--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run compile && npx jest",
-    "compile": "ts-node ./scripts/compile.ts"
+    "compile": "ts-node ./scripts/compile.ts",
+    "deploy": "npm run compile && ts-node ./scripts/deploy.ts",
+    "onchaintest": "ts-node ./scripts/onchaintest.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@orbs-network/ton-access": "^2.3.3",
     "@swc/core": "^1.6.13",
     "@ton-community/func-js": "^0.7.0",
     "@ton-community/sandbox": "^0.11.0",
     "@ton-community/test-utils": "^0.3.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
+    "@types/qrcode-terminal": "^0.12.2",
+    "@types/qs": "^6.9.15",
     "jest": "^29.7.0",
+    "qrcode-terminal": "^0.12.0",
+    "qs": "^6.12.3",
     "ton": "^13.9.0",
     "ton-core": "^0.53.0",
     "ton-crypto": "^3.2.0",
