--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "npm run compile && npx jest",
     "compile": "ts-node ./scripts/compile.ts",
-    "deploy": "npm run compile && ts-node ./scripts/deploy.ts",
-    "onchaintest": "ts-node ./scripts/onchaintest.ts"
+    "deploy": "npm run compile && TESTNET=true ts-node ./scripts/deploy.ts",
+    "deploy:mainnet": "npm run compile && ts-node ./scripts/deploy.ts",
+    "onchaintest": "TESTNET=true ts-node ./scripts/onchaintest.ts",
+    "onchaintest:mainnet": "ts-node ./scripts/onchaintest.ts"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +23,7 @@
     "@types/node": "^20.14.10",
     "@types/qrcode-terminal": "^0.12.2",
     "@types/qs": "^6.9.15",
+    "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "qrcode-terminal": "^0.12.0",
     "qs": "^6.12.3",
